# alpha-zero-api

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.sh
.github/: copilot-instructions.md
.github/workflows/: test.yml
api/: policy_output.cc  policy_output.h
api/cc/: augmenter.h  deserializer.h  game.h  policy_output.cc  policy_output.h  serializer.h
api/cpp/: CMakeLists.txt  augmenter.h  deserializer.h  game.h  policy_output.cc  policy_output.h  serializer.h
api/cpp/AlphaZeroAPI/default/: simple_deserializer.h  simple_serializer.h
api/cpp/AlphaZeroAPI/include/: augmenter.h  configuration.h.in  deserializer.h  game.h  policy_output.h  serializer.h
api/cpp/include/: augmenter.h  deserializer.h  game.h  policy_output.h  serializer.h
cmake/: AlphaZeroAPIConfig.cmake
doc/: api-map.md  report.md
doc/migration-guides/: v0.0.0-to-v0.0.2.md  v0.0.2-to-v0.0.3.md  v0.0.3-to-v0.0.4.md  v0.0.4-to-v0.0.5.md  v0.0.5-to-v0.1.0.md  v0.1.0-to-v0.2.0.md  v0.2.0-to-v0.2.1.md
include/alpha-zero-api/: augmenter.h  configuration.h.in  deserializer.h  game.h  policy_output.h  serializer.h
include/alpha-zero-api/default/: simple_deserializer.h  simple_serializer.h
include/alpha-zero-api/defaults/: deserializer.h  serializer.h
lib/cpp/: policy_output.cc
src/: CMakeLists.txt
src/include/alpha-zero-api/: augmenter.h  configuration.h.in  deserializer.h  game.h  policy_output.h  ring_buffer.h  serializer.h
src/include/alpha-zero-api/defaults/: compact_deserializer.h  compact_serializer.h  deserializer.h  game.h  serializer.h
test/: CMakeLists.txt
test/cmake_externalproject/: CMakeLists.txt
test/connect4/: game.h  main.cc  serializer.cc  serializer.h
test/mock/: serializer.cc  serializer.h
test/tic_tac_toe/: augmentation.cc  augmentation.h  deserializer.cc  deserializer.h  game.cc  game.h  inference.cc  inference.h  main.cc  serializer.cc  serializer.h  train.cc  train.h
tests/: CMakeLists.txt
tests/cmake_externalproject/: CMakeLists.txt
tests/mock/: serializer.h
